@startuml
'https://plantuml.com/class-diagram

class ToDoListController {
-TableView<Task> tableView;
-TableColumn<Task, String> table_task;
-TableColumn<Task, String> table_description;
-TableColumn<Task, String> table_date;
-TableColumn<Task, String> table_progress;
-Button ButtonDelete
-Button ButtonClear
-TextField FilterField
-Menu MenuOpen
-Menu MenuSave
-Menu MenuSaveAs
-TextField Name
-TextField Description
-DatePicker datePickerOption
-CheckBox Progress
-Button ButtonAdd
-Button HelpButton
+ObservableList<Task> task

+MenuSave()
+MenuSaveAs()
+OnClickHelp()
+OnButtonClickDelete()
+OnButtonClickClear()
+OnButtonClickAdd()
+changeTableDate()
+changeTableDescCellEvent()
+changeTableProgress()
+openFile()
+initialize()
+getTask()
CountRows()
CountCompleted()
CountIncomplete()
CountAll()
}

class HelpController {
-Button NextButton
-Button Back
+NextButton()
+OnClickBackToMain()
}

class HelpPage2Controller {
-TableView<> tableView
-Button BackToMain
-Button Back
+OnClickBack()
+OnClickBackToMain()
}

class Task{
-simpleStringProperty TaskName
-simpleStringProperty TaskDesc
-simpleStringProperty Progress
-String Date
+Task()
+getTaskName()
+setTaskName()
+getTaskDesc()
+setTaskDesc()
+getProgress()
+setProgress()
+getDate()
+setDate()
+toString()
}

class DateValidation{
+dateValidation()
+checkDate()
}

class AlertBox{
+display()
}

class JsonFile{
+ToJson()
+ReadJson()
}

class App{
+main()
+start()
}

class Check{
CheckLength()
ChangeDate()
ChangeDescription()
ChangeProgress()
}

class JsonFile{
+ToJson()
+readJson()
+transferContents()
}

javafx.Application <|-- App
App - ToDoListController
App - HelpController
App - HelpPage2Controller
ToDoListController <-- Task
ToDoListController <-- Check
Check <-- DateValidation
ToDoListController <-- JsonFile

@enduml